--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,12 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support:design:26.+'
     compile 'com.android.support:support-v4:26.+'
+    compile 'com.google.firebase:firebase-core:9.0.2'
+    compile 'com.google.firebase:firebase-analytics:9.0.2'
+    compile 'com.google.firebase:firebase-config:9.0.2'
+    compile 'com.google.firebase:firebase-auth:9.0.2'
+
     testCompile 'junit:junit:4.12'
 }
+
+apply plugin: 'com.google.gms.google-services'
